@@ -1,3 +1,7 @@
+2009-10-01  John W. Eaton  <jwe@octave.org>
+
+	* gl-render.cc: Style fixes.
+
 2009-10-01  Shai Ayal  <shaiay@users.sourceforge.net>
 
 	* graphics.cc (image::properties::get_color_data): New function.
